# avatar-validator

./: README.md  pyproject.toml
.github/workflows/: build.yaml
api/: AvatarValidator.py  AvatarValidatorAbstract.py
tests/: AvatarValidatorTests.py
